different way to test NextMoveExamples

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,4 +74,4 @@ jobs:
       - name: Build package
         run: |
           lake build Chess
-          lake build NextMove
+          lake build Chess.NextMoveExamples
